Fixed cross platform isuue on Safari

--- a/client/src/app/profile/profile.component.sass
+++ b/client/src/app/profile/profile.component.sass
@@ -415,3 +415,5 @@ textarea::-webkit-scrollbar
     display: none !important
     -ms-overflow-style: none !important
     overflow: -moz-scrollbars-none !important
+.blur-title
+    width: 10%
